<?xml version="1.0" encoding="utf-8"?>
<com.greenorange.gooutdoor.View.Card.DataItemCard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jas="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_map_data_item_card"
    android:orientation="vertical"
    android:background="@drawable/bg_layout_map_data_item_card"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_map_data_item_height">
        <View
            android:id="@+id/colorview"
            android:background="@color/red"
            android:layout_width="@dimen/layout_map_data_item_color_width"
            android:layout_height="fill_parent"/>
        <LinearLayout
            android:paddingLeft="@dimen/layout_map_data_item_value_padding_left"
            android:layout_toRightOf="@+id/colorview"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <!-- value -->
            <LinearLayout
                android:paddingRight="@dimen/layout_map_data_item_value_padding_left"
                android:paddingBottom="@dimen/layout_map_data_item_value_padding_top"
                android:paddingTop="@dimen/layout_map_data_item_value_padding_top"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <com.greenorange.gooutdoor.framework.widget.autofittextview.AutofitTextView
                    android:id="@+id/v1_1"
                    android:singleLine="true"
                    android:textSize="@dimen/layout_map_data_item_value_v1_textsize"
                    android:textColor="@color/layout_map_data_item_card_value_textcolor"
                    android:layout_weight="1"
                    android:text="@string/layout_map_data_item_card_value_2_1"
                    android:gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>
                <TextView
                    android:id="@+id/v1_2"
                    android:textSize="@dimen/layout_map_data_item_value_v2_textsize"
                    android:text="@string/layout_map_data_item_card_value_t_2_1"
                    android:textColor="@color/layout_map_data_item_card_unit_textcolor"
                    android:layout_width="wrap_content"
                    android:gravity="bottom"
                    android:layout_height="fill_parent"/>
            </LinearLayout>
            <!-- title -->
            <LinearLayout
                android:paddingBottom="@dimen/layout_map_data_item_value_padding_top"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/v2_1"
                    android:text="@string/layout_map_data_item_card_value_v1_2_1"
                    android:textSize="@dimen/layout_map_data_item_value_v2_textsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="@dimen/layout_map_data_item_value_padding_top"
                    android:id="@+id/v2_2"
                    android:text="@string/layout_map_data_item_card_value_v2_2_1"
                    android:textSize="@dimen/layout_map_data_item_value_v2_textsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
</com.greenorange.gooutdoor.View.Card.DataItemCard>